--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass sass/main.scss css/style.css --watch",
-    "prefix:css": "npx postcss css/*.css --use autoprefixer -o css/style.prefix.css",
+    "prefix:css": "npx postcss css/style.css --use autoprefixer -o css/style.prefix.css",
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
@@ -13,8 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^9.5.1",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2"
+  },
+  "dependencies": {
+    "gulp": "^4.0.1"
   }
 }
