--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^9.5.1",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.2"
